New files are added

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
       </nav>
 
-      
+
   </header>
 
 
@@ -144,7 +144,10 @@
 
               <p class="hero-text">
                 My name is Anurag Saini and I am a Computer Science and Engineering student at Meerut Institute of
-                Engineering and Technology. I am a driven Full Stack Developer with expertise in HTML, CSS, JavaScript, React, Node.js, and database integration. Dedicated to continuous learning, I am passionate about problem-solving and eager to explore cloud computing platforms like AWS and Azure. Excited to contribute my skills and creativity for impactful solutions in a dynamic team environment.
+                Engineering and Technology. I am a driven Full Stack Developer with expertise in HTML, CSS, JavaScript,
+                React, Node.js, and database integration. Dedicated to continuous learning, I am passionate about
+                problem-solving and eager to explore cloud computing platforms like AWS and Azure. Excited to contribute
+                my skills and creativity for impactful solutions in a dynamic team environment.
               </p>
             </div>
 
@@ -348,9 +351,12 @@
 
                       <div class="social-list">
 
-                        <a href="https://www.facebook.com/anuragsaini494/" class="social-link h6" title="Facebook">fb.</a>
-                        <a href="https://www.linkedin.com/in/anurag-saini-a9116b237/" class="social-link h6" title="Behance">in</a>
-                        <a href="https://www.instagram.com/_anuragsaini_494/" class="social-link h6" title="Linkedin">ia.</a>
+                        <a href="https://www.facebook.com/anuragsaini494/" class="social-link h6"
+                          title="Facebook">fb.</a>
+                        <a href="https://www.linkedin.com/in/anurag-saini-a9116b237/" class="social-link h6"
+                          title="Behance">in</a>
+                        <a href="https://www.instagram.com/_anuragsaini_494/" class="social-link h6"
+                          title="Linkedin">ia.</a>
                         <a href="https://github.com/Anuragsaini41" class="social-link h6" title="Dribbble">gh.</a>
 
                       </div>
@@ -467,7 +473,7 @@
               <h3 class="h4 title section-title">
                 My Certifications.
               </h3>
-              <p>Unlocking the future with a diverse skillset: Cloud architecture, RPA mastery, Cybersecurity vigilance,
+              <p>Unlocking the future with a diverse skillset: Cloud architecture, Cybersecurity vigilance,
                 and MERN Stack proficiency. These certifications are not just accolades, but gateways to innovation,
                 efficiency, and resilience in the digital realm. Let's build, automate, protect, and scale - shaping
                 tomorrow's technology landscape today!
@@ -520,7 +526,7 @@
                 <li>
                   <div class="award-card">
                     <figure class="card-banner img-holder" style="--width: 534; --height: 383;" data-tilt>
-                      <img src="./assets/images/awward-6.jpeg" width="534" height="383" loading="lazy" alt="certificate"
+                      <img src="./assets/images/awward-6.jpg" width="534" height="383" loading="lazy" alt="certificate"
                         class="img-cover">
                     </figure>
                   </div>
@@ -531,10 +537,6 @@
 
             </div>
       </section>
-
-
-
-
 
       <!-- 
         - #CTA
@@ -551,9 +553,6 @@
       </section>
 
 
-
-
-
       <!-- 
         - #PROJECTS
       -->
@@ -561,6 +560,57 @@
       <section class="section project" aria-label="my latest projects" id="project">
 
         <ul class="slider-list">
+
+          
+          <li class="slider-item">
+            <div class="project-card text-center">
+
+              <div class="card-banner img-holder has-before" style="--width: 1000; --height: 763;">
+                <img src="./assets/images/vyaktitva.png" width="1000" height="763" loading="lazy"
+                  alt="Project poster: Flutter Framework & Warframe Design" class="img-cover">
+
+                <a href="https://drive.google.com/file/d/1hh6dwZISIQXxlInuYe3WmKR5RSlhjDHK/view?usp=drive_link" class="btn btn:hover">
+                  <span class="span">Video Link</span>
+
+                  <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
+                </a>
+              </div>
+
+              <div class="card-content">
+                <p class="card-subtitle">Vyaktitva</p>
+
+                <h3 class="title h3">
+                  <a href="https://drive.google.com/file/d/1mtsJ2ybKWFZwd12DCaz3f6LmsMFtrPdw/view?usp=drive_link" class="card-title">Developed to assess user’s personality and generating scores for Five Major Traits</a>
+                </h3>
+              </div>
+
+            </div>
+          </li>
+
+          <li class="slider-item">
+            <div class="project-card text-center">
+
+              <div class="card-banner img-holder has-before" style="--width: 1000; --height: 763;">
+                <img src="./assets/images/Sanskriti.png" width="1000" height="763" loading="lazy"
+                  alt="Project poster: Flutter Framework & Warframe Design" class="img-cover">
+
+                <a href="https://drive.google.com/file/d/1mtsJ2ybKWFZwd12DCaz3f6LmsMFtrPdw/view?usp=drive_link" class="btn btn:hover">
+                  <span class="span">Video Link</span>
+
+                  <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
+                </a>
+              </div>
+
+              <div class="card-content">
+                <p class="card-subtitle">Sanskriti</p>
+
+                <h3 class="title h3">
+                  <a href="https://drive.google.com/file/d/1mtsJ2ybKWFZwd12DCaz3f6LmsMFtrPdw/view?usp=drive_link" class="card-title">Developed to showcase Indian Culture, Tradition and Heritage </a>
+                </h3>
+              </div>
+
+            </div>
+          </li>
 
           <li class="slider-item">
             <div class="project-card text-center">
@@ -698,7 +748,8 @@
                 <img src="./assets/images/kids.jpg" width="1000" height="763" loading="lazy"
                   alt="Project poster: Creative & experienced digital design studio" class="img-cover">
 
-                <a href="https://medium.com/@anuragsaini4141/python-for-kids-5-reasons-why-python-programming-is-perfect-for-kids-fb3d59a2b6fd" class="btn btn:hover">
+                <a href="https://medium.com/@anuragsaini4141/python-for-kids-5-reasons-why-python-programming-is-perfect-for-kids-fb3d59a2b6fd"
+                  class="btn btn:hover">
                   <span class="span">Blog Link</span>
 
                   <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
@@ -709,7 +760,8 @@
                 <p class="card-subtitle">Python Programming For Kids</p>
 
                 <h3 class="title h3">
-                  <a href="https://medium.com/@anuragsaini4141/python-for-kids-5-reasons-why-python-programming-is-perfect-for-kids-fb3d59a2b6fd" class="card-title">5 Reasons Why Python Programming Is Perfect for Kids</a>
+                  <a href="https://medium.com/@anuragsaini4141/python-for-kids-5-reasons-why-python-programming-is-perfect-for-kids-fb3d59a2b6fd"
+                    class="card-title">5 Reasons Why Python Programming Is Perfect for Kids</a>
                 </h3>
               </div>
 
@@ -723,7 +775,8 @@
                 <img src="./assets/images/link.jpeg" width="1000" height="763" loading="lazy"
                   alt="Project poster: Front End Development & Maintenance" class="img-cover">
 
-                <a href="https://medium.com/@anuragsaini4141/how-to-use-linkedin-effectively-during-your-job-search-c92eba632f72" class="btn btn:hover">
+                <a href="https://medium.com/@anuragsaini4141/how-to-use-linkedin-effectively-during-your-job-search-c92eba632f72"
+                  class="btn btn:hover">
                   <span class="span">Blog Link</span>
 
                   <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
@@ -734,7 +787,8 @@
                 <p class="card-subtitle">Linkedin For Job Search</p>
 
                 <h3 class="title h3">
-                  <a href="https://medium.com/@anuragsaini4141/how-to-use-linkedin-effectively-during-your-job-search-c92eba632f72" class="card-title">How to use LinkedIn effectively during your job search?</a>
+                  <a href="https://medium.com/@anuragsaini4141/how-to-use-linkedin-effectively-during-your-job-search-c92eba632f72"
+                    class="card-title">How to use LinkedIn effectively during your job search?</a>
                 </h3>
               </div>
 
