New Certifications and Projects are added

--- a/index.html
+++ b/index.html
@@ -616,6 +616,31 @@
             <div class="project-card text-center">
 
               <div class="card-banner img-holder has-before" style="--width: 1000; --height: 763;">
+                <img src="./assets/images/FitnessYatra.png" width="1000" height="763" loading="lazy"
+                  alt="Project poster: Flutter Framework & Warframe Design" class="img-cover">
+
+                <a href="https://fitness-yatra.netlify.app/" class="btn btn:hover">
+                  <span class="span">Project Link</span>
+
+                  <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
+                </a>
+              </div>
+
+              <div class="card-content">
+                <p class="card-subtitle">Fitness Yatra</p>
+
+                <h3 class="title h3">
+                  <a href="https://github.com/Anuragsaini41/Fitness-Yatra" class="card-title">Developed Fitness Yatra, a website offering curated exercises for different muscle groups, complete with instructional YouTube videos for enhanced workout guidance</a>
+                </h3>
+              </div>
+
+            </div>
+          </li>
+
+          <li class="slider-item">
+            <div class="project-card text-center">
+
+              <div class="card-banner img-holder has-before" style="--width: 1000; --height: 763;">
                 <img src="./assets/images/project-1.jpg" width="1000" height="763" loading="lazy"
                   alt="Project poster: Creative & experienced digital design studio" class="img-cover">
 
