--- a/index.html
+++ b/index.html
@@ -404,6 +404,17 @@
                       <div class="skill-wrapper">
                         <span class="span">Data Structures & Algorithms</span>
 
+                        <span class="value">75%</span>
+                      </div>
+
+                      <div class="progress-bar">
+                        <div class="progress-fill" style="width: 75%"></div>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="skill-wrapper">
+                        <span class="span">Cloud Computing</span>
+
                         <span class="value">85%</span>
                       </div>
 
@@ -411,37 +422,16 @@
                         <div class="progress-fill" style="width: 85%"></div>
                       </div>
                     </li>
+                    
                     <li>
                       <div class="skill-wrapper">
-                        <span class="span">Cloud Computing</span>
+                        <span class="span">GitHUB</span>
 
-                        <span class="value">70%</span>
+                        <span class="value">75%</span>
                       </div>
 
                       <div class="progress-bar">
-                        <div class="progress-fill" style="width: 70%"></div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="skill-wrapper">
-                        <span class="span">Cybersecurity & Networking</span>
-
-                        <span class="value">70%</span>
-                      </div>
-
-                      <div class="progress-bar">
-                        <div class="progress-fill" style="width: 70%"></div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="skill-wrapper">
-                        <span class="span">UiPath Automation</span>
-
-                        <span class="value">60%</span>
-                      </div>
-
-                      <div class="progress-bar">
-                        <div class="progress-fill" style="width: 60%"></div>
+                        <div class="progress-fill" style="width: 75%"></div>
                       </div>
                     </li>
                     <li>
@@ -453,6 +443,18 @@
 
                       <div class="progress-bar">
                         <div class="progress-fill" style="width: 70%"></div>
+                      </div>
+                    </li>
+
+                    <li>
+                      <div class="skill-wrapper">
+                        <span class="span">Cybersecurity & Networking</span>
+
+                        <span class="value">50%</span>
+                      </div>
+
+                      <div class="progress-bar">
+                        <div class="progress-fill" style="width: 50%"></div>
                       </div>
                     </li>
 
